--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         <p>&copy; 2023 Handmade Crafts Store. All rights reserved.</p>
     </footer>
 
-  <script src="apijson.js"></script>
+  <script src="index.js"></script>
 
 </body>
 </html>
