--- a/index.html
+++ b/index.html
@@ -76,11 +76,10 @@
                 </div>
 
 
-                <div class="Product_item">
-                <div class="product_buttons">
+
 
                   <div class="bar">
-                      <button id="myButton">Вывести все посты</button>
+                      <button id="myButton">Показать все посты</button>
                     </div>
                     <div class="bar">
                       <button id="Posts">Вывести пост:</button>
@@ -90,8 +89,7 @@
                       <button id="Filter">Фильтрация: </button>
                       <input id="nameFil" placeholder="Введите номер пользователя...">
                     </div>
-                </div>
-              </div>
+ 
 
         </section>
 </div>
