--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="handmade, crafts, products">
     <meta name="description" content="Изделия ручной работы">
-    <title>Handmade Crafts Store</title>
+    <title>Изделия ручной работы</title>
     <link rel="stylesheet" href="Styles.css">
 </head>
 <body>
@@ -74,9 +74,6 @@
                     <a href="#" class="add-to-cart-btn">Добавить в корзину</a>
                   </div>
                 </div>
-
-
-
 
                   <div class="bar">
                       <button id="myButton">Показать все посты</button>
